--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 let result = eval(expression); // คำนวณ
                 document.getElementById("result").innerText = result;
             } catch (error) {
-                alert("กรอกโจทย์ไม่ถูกต้อง");
+                alert("สมการไม่ถูกต้อง");
             }
         }
 
